Only focus the sad tab view if its widget is already active.

In crrev.com/c/910716, I made it so that a button on the sad tab view
takes focus when the sad tab appears, which improves accessibility.
This had the side effect of activating the window if it was previously
in the background. Fix this by only focusing the view in the sad tab
if its widget is already active.

Bug: 838855
Change-Id: Ia70279fd010a03c5185e6c4b9f1c85168fce899a
Reviewed-on: https://chromium-review.googlesource.com/1073494
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562455}
Former-commit-id: 0778cbc504f75db4521f284c784340888c2469b5